Finish OpenJ9 + few other changes